Correct Java usage of Double